@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.16 1999/11/17 22:46:40 tiniou Exp $
+$Id: CHANGES,v 1.17 1999/11/21 00:17:12 tiniou Exp $
 
 Changes between versions 0.4b9 and 0.4b10 (released ???????????????)
 ====================================================================
@@ -14,6 +14,10 @@ Changes between versions 0.4b9 and 0.4b10 (released ???????????????)
 	feature enabled. Thanks to Patrick J. LoPresti 
 	<patl@cag.lcs.mit.edu> for reporting the bug and to
 	Theodore Y. Ts'o <tytso@mit.edu> for providing the patch.
+
+3.	Made the nodump flag work on directories. A directory which
+	has the nodump flag gets never dumped, regardless of its
+	contents.
 
 Changes between versions 0.4b8 and 0.4b9 (released November 5, 1999)
 ====================================================================
